--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -32,7 +32,12 @@
                 android:id="@+id/btn_skip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="跳转" />
+                android:text="跳转1" />
+            <Button
+                android:id="@+id/btn_skip2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="跳转2" />
 
             <Button
                 android:id="@+id/btn_status_hide"
