--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,86 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我是顶部" />
-
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:background="@android:color/darker_gray"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我是顶部" />
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-            <Button
-                android:id="@+id/btn_skip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="跳转1" />
-            <Button
-                android:id="@+id/btn_skip2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="跳转2" />
+            android:layout_weight="1">
 
-            <Button
-                android:id="@+id/btn_status_hide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="隐藏状态栏" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_navigation_hide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="隐藏导航栏" />
+                <Button
+                    android:id="@+id/btn_skip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="跳转1" />
 
-            <Button
-                android:id="@+id/btn_bar_hide"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="隐藏全部" />
+                <Button
+                    android:id="@+id/btn_skip2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="跳转2" />
 
-            <Button
-                android:id="@+id/btn_bar_show"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="恢复显示" />
+                <Button
+                    android:id="@+id/btn_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="侧边栏" />
 
-            <Button
-                android:id="@+id/btn_bar_font_dark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="状态栏字体颜色为深色(android6.0以上或者miuiv6以上或者flymeOS)" />
+                <Button
+                    android:id="@+id/btn_status_hide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="隐藏状态栏" />
 
-            <Button
-                android:id="@+id/btn_bar_font_light"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="状态栏字体颜色为亮色(android6.0以上或者miuiv6以上或者flymeOS)" />
-        </LinearLayout>
-    </ScrollView>
+                <Button
+                    android:id="@+id/btn_navigation_hide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="隐藏导航栏" />
+
+                <Button
+                    android:id="@+id/btn_bar_hide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="隐藏全部" />
+
+                <Button
+                    android:id="@+id/btn_bar_show"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="恢复显示" />
+
+                <Button
+                    android:id="@+id/btn_bar_font_dark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="状态栏字体颜色为深色(android6.0以上或者miuiv6以上或者flymeOS)" />
+
+                <Button
+                    android:id="@+id/btn_bar_font_light"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="状态栏字体颜色为亮色（默认就是亮色）" />
+            </LinearLayout>
+        </ScrollView>
 
 
-    <TextView
+        <TextView
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我是底部" />
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我是底部" />
+    </LinearLayout>
+
+    <include layout="@layout/drawer_left" />
+</android.support.v4.widget.DrawerLayout>
